ops/k8s/quan-hong-chan/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quan-hong-chan
spec:
  selector:
    app: quan-hong-chan
  ports:
    - name: http
      port: 80
      targetPort: http
