ops/k8s/quan-hong-chan/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quan-hong-chan
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - quan-hong-chan.lol
        - www.quan-hong-chan.lol
      secretName: quan-hong-chan-tls
  rules:
    - host: quan-hong-chan.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quan-hong-chan
                port:
                  name: http
    - host: www.quan-hong-chan.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quan-hong-chan
                port:
                  name: http
